--- a/portfolio.css
+++ b/portfolio.css
@@ -7,7 +7,7 @@ body{
 }
 
 .navbars{
-    position: fixed;
+    position: absoulte;
     text-align: center;
     background:transparent;
     display:flex;
