--- a/portfolio.css
+++ b/portfolio.css
@@ -143,8 +143,10 @@ body{
         padding:2%;
     }
     .career-contents{
+        text-align:center;
         display:flex;
         flex-direction: column;
+        font-size:12px;
     }
 
     .career-content{
